Fix display on tablets

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,16 +1,19 @@
 /* your custom css */
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
-  img.logo {
-    max-width: 10em;
-    height: auto !important;
-  }
 }
 
 @media only screen and (min-width: 1024px) {
 }
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 1024px) {
+  .fixedHeaderContainer header h2 {
+    display: none;
+  }
+  img.logo {
+    max-width: 10em;
+    height: auto !important;
+  }
 }
 
 @media only screen and (min-width: 1400px) {
